--- a/src/scss/digital-clock.scss
+++ b/src/scss/digital-clock.scss
@@ -1,6 +1,216 @@
-body {
+.digital-clock {
+  box-sizing: border-box;
 
-  p {
-    color: #802;
+
+  .digit {
+    position: relative;
+    display: inline-block;
+    width: 1em;
+    height: 2em;
+
+    margin-right: .25em;
+
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+
+    &.hidden {
+      display: none;
+    }
+
+
+    & > li {
+      $h-indicator-thickness: 5%;
+      $h-indicator-margin: $h-indicator-thickness * 1.25;
+
+      $v-indicator-thickness: 2 * $h-indicator-thickness;
+      $v-indicator-margin: $h-indicator-thickness * .85;
+      $v-indicator-height: (100% - 2 * $h-indicator-thickness) / 2;
+
+      $border-radius-out: 50%;
+      $border-radius-in: 30%; // .05em;
+
+      position: absolute;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      background-color: hsla(220, 20%, 60%, .5);
+      transform: scale(0, 0);
+      transition: transform 150ms ease;
+
+      /*
+       * Indicators position
+       *   .-- 1 --.    .-------.
+       *   |       |    |       |
+       *   2       3    |   8   |
+       *   |       |    |       |
+       *   +-- 4 --+    +-------+
+       *   |       |    |       |
+       *   5       6    |   9   |
+       *   |       |    |       |
+       *   `-- 7 --'    `-------'
+       */
+      &:nth-child(1) {
+        top: 0;
+        left: $h-indicator-margin;
+        right: $h-indicator-margin;
+        height: $h-indicator-thickness;
+        border-radius: $border-radius-out $border-radius-out $border-radius-in $border-radius-in;
+      }
+      &:nth-child(2) {
+        top: $v-indicator-margin;
+        left: 0;
+        width: $v-indicator-thickness;
+        height: $v-indicator-height;
+        border-radius: $border-radius-out $border-radius-in $border-radius-in $border-radius-out;
+      }
+      &:nth-child(3) {
+        top: $v-indicator-margin;
+        right: 0;
+        width: $v-indicator-thickness;
+        height: $v-indicator-height;
+        border-radius: $border-radius-in $border-radius-out $border-radius-out $border-radius-in;
+      }
+      &:nth-child(4) {
+        top: 50% - $h-indicator-thickness / 2;
+        left: 1.3 * $h-indicator-margin;
+        right: 1.3 * $h-indicator-margin;
+        height: $h-indicator-thickness;
+        border-radius: $border-radius-out;
+      }
+      &:nth-child(5) {
+        bottom: $v-indicator-margin;
+        left: 0;
+        width: $v-indicator-thickness;
+        height: $v-indicator-height;
+        border-radius: $border-radius-out $border-radius-in $border-radius-in $border-radius-out;
+      }
+      &:nth-child(6) {
+        bottom: $v-indicator-margin;
+        right: 0;
+        width: $v-indicator-thickness;
+        height: $v-indicator-height;
+        border-radius: $border-radius-in $border-radius-out $border-radius-out $border-radius-in;
+      }
+      &:nth-child(7) {
+        bottom: 0;
+        left: $h-indicator-margin;
+        right: $h-indicator-margin;
+        height: $h-indicator-thickness;
+        border-radius: $border-radius-in $border-radius-in $border-radius-out $border-radius-out;
+      }
+      &:nth-child(8) {
+        top: 25% - $v-indicator-thickness / 2;
+        left: 50% - $h-indicator-thickness / 2;
+        width: $h-indicator-thickness;
+        height: $v-indicator-thickness;
+        border-radius: $border-radius-out;
+      }
+      &:nth-child(9) {
+        top: 75% - $v-indicator-thickness / 2;
+        left: 50% - $h-indicator-thickness / 2;
+        width: $h-indicator-thickness;
+        height: $v-indicator-thickness;
+        border-radius: $border-radius-out;
+      }
+    }
+
+
+    &.d-0 {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(5),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-1 {
+      & > li:nth-child(3),
+      & > li:nth-child(6) { transform: scale(1, 1); }
+    }
+    &.d-2 {
+      & > li:nth-child(1),
+      & > li:nth-child(3),
+      & > li:nth-child(4),
+      & > li:nth-child(5),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-3 {
+      & > li:nth-child(1),
+      & > li:nth-child(3),
+      & > li:nth-child(4),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-4 {
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(4),
+      & > li:nth-child(6) { transform: scale(1, 1); }
+    }
+    &.d-5 {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(4),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-6 {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(4),
+      & > li:nth-child(5),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-7 {
+      & > li:nth-child(1),
+      & > li:nth-child(3),
+      & > li:nth-child(6) { transform: scale(1, 1); }
+    }
+    &.d-8 {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(5),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-9 {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.d-minus {
+      & > li:nth-child(4) { transform: scale(1, 1); }
+    }
+    &.d-colon {
+      & > li:nth-child(8),
+      & > li:nth-child(9) { transform: scale(1, 1); }
+    }
+    &.d-a {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(5),
+      & > li:nth-child(6) { transform: scale(1, 1); }
+    }
+    &.d-p {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(3),
+      & > li:nth-child(4),
+      & > li:nth-child(5) { transform: scale(1, 1); }
+    }
   }
+}
+
+
+// configurable
+.digital-clock > .digit {
+  font-size: 5em;
 }
