--- a/src/scss/digital-clock.scss
+++ b/src/scss/digital-clock.scss
@@ -103,15 +103,15 @@
       }
       &:nth-child(8) {
         top: 25% - $v-indicator-thickness / 2;
-        left: 50% - $h-indicator-thickness / 2;
-        width: $h-indicator-thickness;
+        left: 50% - $h-indicator-thickness;
+        width: $h-indicator-thickness * 2;
         height: $v-indicator-thickness;
         border-radius: $border-radius-out;
       }
       &:nth-child(9) {
         top: 75% - $v-indicator-thickness / 2;
-        left: 50% - $h-indicator-thickness / 2;
-        width: $h-indicator-thickness;
+        left: 50% - $h-indicator-thickness;
+        width: $h-indicator-thickness * 2;
         height: $v-indicator-thickness;
         border-radius: $border-radius-out;
       }
@@ -174,6 +174,7 @@
       & > li:nth-child(1),
       & > li:nth-child(2),
       & > li:nth-child(3),
+      & > li:nth-child(4),
       & > li:nth-child(5),
       & > li:nth-child(6),
       & > li:nth-child(7) { transform: scale(1, 1); }
@@ -182,6 +183,7 @@
       & > li:nth-child(1),
       & > li:nth-child(2),
       & > li:nth-child(3),
+      & > li:nth-child(4),
       & > li:nth-child(6),
       & > li:nth-child(7) { transform: scale(1, 1); }
     }
@@ -196,6 +198,7 @@
       & > li:nth-child(1),
       & > li:nth-child(2),
       & > li:nth-child(3),
+      & > li:nth-child(4),
       & > li:nth-child(5),
       & > li:nth-child(6) { transform: scale(1, 1); }
     }
