--- a/src/scss/digital-clock.scss
+++ b/src/scss/digital-clock.scss
@@ -1,7 +1,7 @@
 .digital-clock {
   // configurable
   --color: #000;
-  --font-size: 5em;
+  --font-size: 2em;
 
   box-sizing: border-box;
 
@@ -47,15 +47,15 @@
 
       /*
        * Indicators position
-       *   .-- 1 --.    .-------.
-       *   |       |    |       |
-       *   2       3    |   8   |
-       *   |       |    |       |
-       *   +-- 4 --+    +-------+
-       *   |       |    |       |
-       *   5       6    |   9   |
-       *   |       |    |       |
-       *   `-- 7 --'    `-------'
+       *   .-- 1 --.    .-------.    .-------.
+       *   |       |    |       |    |       |
+       *   2       3    |   8   |    |       |
+       *   |       |    |       |    |       |
+       *   +-- 4 --+    +-------+    +-------+
+       *   |       |    |       |    |       |
+       *   5       6    |   9   |    |       |
+       *   |       |    |       |    |       |
+       *   `-- 7 --'    `-------'    `  10   '
        */
       &:nth-child(1) {
         top: 0;
@@ -115,6 +115,13 @@
       }
       &:nth-child(9) {
         top: 75% - $v-indicator-thickness / 2;
+        left: 50% - $h-indicator-thickness;
+        width: $h-indicator-thickness * 2;
+        height: $v-indicator-thickness;
+        border-radius: $border-radius-out;
+      }
+      &:nth-child(10) {
+        bottom: 0;
         left: 50% - $h-indicator-thickness;
         width: $h-indicator-thickness * 2;
         height: $v-indicator-thickness;
@@ -192,6 +199,7 @@
       & > li:nth-child(6),
       & > li:nth-child(7) { transform: scale(1, 1); }
     }
+
     &.ch-minus {
       & > li:nth-child(4) { transform: scale(1, 1); }
     }
@@ -199,6 +207,14 @@
       & > li:nth-child(8),
       & > li:nth-child(9) { transform: scale(1, 1); }
     }
+    &.ch-space {}
+    &.ch-under {
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.ch-dot {
+      & > li:nth-child(10) { transform: scale(1, 1); }
+    }
+
     &.ch-a {
       & > li:nth-child(1),
       & > li:nth-child(2),
@@ -206,6 +222,39 @@
       & > li:nth-child(4),
       & > li:nth-child(5),
       & > li:nth-child(6) { transform: scale(1, 1); }
+    }
+    &.ch-b {
+      & > li:nth-child(2),
+      & > li:nth-child(4),
+      & > li:nth-child(5),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.ch-c {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(5),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.ch-d {
+      & > li:nth-child(3),
+      & > li:nth-child(4),
+      & > li:nth-child(5),
+      & > li:nth-child(6),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.ch-e {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(4),
+      & > li:nth-child(5),
+      & > li:nth-child(7) { transform: scale(1, 1); }
+    }
+    &.ch-f {
+      & > li:nth-child(1),
+      & > li:nth-child(2),
+      & > li:nth-child(4),
+      & > li:nth-child(5) { transform: scale(1, 1); }
     }
     &.ch-p {
       & > li:nth-child(1),
